--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Twitch Admin, designer of pretty things and player of vidya games">
-    <meta name="author" content="Truthful">
+    <meta name="description" content="UI/UX, Photographer, Customer Service Professional.">
+    <meta name="author" content="Brant">
   <!--  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' /> -->
 
     <title>Hi, It's Brant.</title>
